[workspace]
members = ["gyazo_fetch", "stock-cli", "hello_world", "image_move"]

[workspace.dependencies]
structopt = "0.3.21"
exitfailure = "0.5.1"
reqwest = { version = "0.12.7", features = ["json", "multipart"] }
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
dotenv = "0.15.0"
tokio = { version = "1.0.2", features = ["full"] }
