[package]
name = "gyazo_fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt.workspace = true
exitfailure.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
dotenv.workspace = true
tokio = { workspace = true, features = ["full"] }
