# from https://dev.to/hb/how-to-fetch-a-web-api-with-rust-1390

[package]
name = "stock-cli"
version = "0.1.0"
authors = ["Your Name"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt.workspace = true
exitfailure.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
dotenv.workspace = true
tokio = { workspace = true, features = ["full"] }
